updated css file for about page

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -8,7 +8,7 @@ body {
     /* Margin bottom by footer height */
     margin-bottom: 60px;
 }
-#content {
+#about {
     padding-top: 48px;
 }
 .footer {
