--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -10,5 +10,5 @@
     <!-- STYLESHEETS -->
     <!-- CSS (load bootstrap from a CDN) -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../../public/stylesheets/style.css">
+    <link rel="stylesheet" href="/public/style.css">
 </head>
